--- a/document/内存管理库.md
+++ b/document/内存管理库.md
@@ -67,7 +67,7 @@
 ### 3. 对齐分配 (C++17)
 - 使用 `align_val_t` 和对应的 `operator new`/`operator delete` 重载进行对齐内存分配
 
-### 4. 放置 new
+### 4. [原地构造 new](https://cppreference.cn/w/cpp/memory/new/operator_new)
 - 在已分配的内存上构造对象，不进行实际的内存分配
 
 ### 5. new_handler
