--- a/document/算法库.md
+++ b/document/算法库.md
@@ -1210,3 +1210,37 @@ void radix_sort(_NumericType* _Ptr, std::size_t _Size)
 }
 ```
 
+## 3. 找出前n个最小/最大的数
+
+```c
+template <typename _Ty, typename _Cmp = std::less<_Ty>>
+requires (std::is_arithmetic_v<_Ty> && !std::is_same_v<_Ty, bool>)
+std::vector<_Ty> find_top_n(const std::vector<_Ty>& vec, std::size_t n) {
+    if (n >= vec.size()) return vec;
+    std::priority_queue<_Ty, std::vector<_Ty>, _Cmp> min_heap;
+
+    // 第一阶段：先填充n个元素
+    auto it = vec.begin();
+    for (; it != vec.end() && min_heap.size() < n; ++it) {
+        min_heap.push(*it);
+    }
+
+    // 第二阶段：只处理可能大于堆顶的元素
+    for (; it != vec.end(); ++it) {
+        if (*it > min_heap.top()) {
+            min_heap.pop();
+            min_heap.push(*it);
+        }
+    }
+
+    std::vector<_Ty> result;
+    result.reserve(n);
+    while (!min_heap.empty()) {
+        result.push_back(min_heap.top());
+        min_heap.pop();
+    }
+    std::reverse(result.begin(), result.end());
+    return result;
+}
+```
+
