--- a/document/类型支持库.md
+++ b/document/类型支持库.md
@@ -446,7 +446,16 @@ int main()
 #include <iostream>
 #include <type_traits>
 int gfunc(int x) { return x * 2; }
-
+decltype(auto) f1()
+{
+	static int n{};
+    return (n);
+}
+decltype(auto) f2()
+{
+	static int n{};
+    return n;
+}
 int main() {
     int max = INT_MAX + 100;
     std::println("overflow: max = {}", max);
@@ -459,6 +468,14 @@ int main() {
     volatile int x = 10;
 
     auto func = [](int x) -> int { return x * 2; };
+    using _Tyx = decltype(&std::vector<int>::size)(std::vector<int>);
+
+    using _Tyy = decltype(std::vector<int>{}.size())(std::vector<int>);
+#if __cplusplus >= 201703L
+    using _T = std::invoke_result_t<_Tyx>;
+#else
+    using _T = std::result_of_t<_Ty>;
+#endif
     
     {
         // decltype(auto) 类型说明符也像 auto 一样推导类型。然而，它在推导返回类型时会保留引用和 cv 限定符，而 auto 则不会。
@@ -474,6 +491,26 @@ int main() {
         decltype(auto) z2 = std::move(z); // int&&
 
         static_assert(std::is_same_v<decltype(x), decltype(x2)>);
+    }
+    
+    {
+        auto&& x1 = f1(); // 类型提升
+        auto&& x2 = f2();
+        auto x11 = f1();
+        auto x22 = f2();
+        static_assert(
+            !std::is_same_v<decltype(x1), decltype(x2)> && // int& != int &&
+            std::is_same_v<decltype(x11), decltype(x22)> // int == int
+            );
+
+        decltype(auto) y1 = --x11; // 前置返回T&
+        decltype(auto) y2 = ++x11;
+        decltype(auto) y3 = x11++; // 后置返回T
+        decltype(auto) y4 = x11--;
+        static_assert(
+            std::is_same_v<decltype(y1), decltype(y2)> && // int& == int &
+            std::is_same_v<decltype(y3), decltype(y4)> // int == int
+            );
     }
 
     // std::remove_extent_t 只能移除C风格数组的extent，不能移除std::array的extent
