--- a/document/通用工具库.md
+++ b/document/通用工具库.md
@@ -1462,7 +1462,7 @@ rabin_karp_searcher             : Found        | Time:  8732 μs
    - MSVC的实现通常基于高效的双向比较算法，并针对不同模式串长度进行优化
    - 使用`std::search`时，编译器会根据迭代器类型和模式大小选择最优算法
 
-### (3) std::invoke/std::invoke_r
+### (3) std::invoke/std::invoke_r/[`显式对象参数特性(C++23)`](https://open-std.org/JTC1/SC22/WG21/docs/papers/2021/p0847r7.html#recursive-lambdas)
 
 #### a. 核心概念：`INVOKE` 机制
 
@@ -1530,12 +1530,24 @@ struct MyClass {
         std::cout << "Static function: " << s << std::endl;
     }
 
+    // 6. C++23 显式对象参数成员函数
+    void explicit_object_func(this MyClass& self, int value) {
+        std::cout << "Explicit object function: " << value << ", data: " << self.data << std::endl;
+    }
+
+    // 7. C++23 显式对象参数 const 成员函数
+    void explicit_object_const_func(this const MyClass& self, int value) {
+        std::cout << "Explicit object const function: " << value << ", data: " << self.data << std::endl;
+    }
+
     int data = 42;
 };
 
 int main() {
     MyClass obj;
     auto lambda = [](int a, int b) { return a + b; };
+
+    std::cout << "=== Using std::invoke ===\n";
 
     // --- 使用 std::invoke 调用各种对象 ---
 
@@ -1545,7 +1557,7 @@ int main() {
     // 2. 调用函数对象
     Functor func_obj;
     std::invoke(func_obj, 3.14);
-    // 也可以调用其数据成员（符合 INVOKE 规则3，但看起来像规则2）
+    // 也可以调用其数据成员
     std::cout << "Invoking data member: " << std::invoke(&Functor::data, func_obj) << std::endl;
 
     // 3. 调用成员函数（需要传入一个对象作为第一个参数）
@@ -1560,21 +1572,84 @@ int main() {
     const MyClass const_obj;
     std::invoke(&MyClass::const_member_func, const_obj, 66);
 
-    // 5. 调用静态成员函数（可以像普通函数一样调用，也可以用成员指针语法）
+    // 5. 调用静态成员函数
     std::invoke(&MyClass::static_func, "World");
-    // 等价于 MyClass::static_func("World");
 
     // 6. 调用 lambda 表达式
     int sum = std::invoke(lambda, 5, 6);
     std::cout << "Lambda result: " << sum << std::endl;
 
-    // 7. 调用数据成员指针（获取成员的值）
-    // 定义一个指向 MyClass::data 的成员指针
+    // 7. 调用数据成员指针
     int MyClass::* mem_data_ptr = &MyClass::data;
-    // 通过对象获取成员值
     std::cout << "Invoke data member ptr on object: " << std::invoke(mem_data_ptr, obj) << std::endl;
-    // 通过对象指针获取成员值
     std::cout << "Invoke data member ptr on pointer: " << std::invoke(mem_data_ptr, &obj) << std::endl;
+
+    // 8. 调用 C++23 显式对象参数成员函数
+    std::invoke(&MyClass::explicit_object_func, obj, 55);
+    std::invoke(&MyClass::explicit_object_const_func, const_obj, 44);
+
+    std::cout << "\n=== Using traditional methods (pre-C++23) ===\n";
+
+    // --- 使用传统方式调用 ---
+
+    // 1. 普通函数直接调用
+    global_func(10, "Hello (direct)");
+
+    // 2. 函数对象直接调用
+    func_obj(3.14);
+
+    // 3. 成员函数调用
+    // 直接通过对象调用
+    obj.member_func(88);
+    // 通过指针调用
+    MyClass* obj_ptr = &obj;
+    obj_ptr->member_func(99);
+    // 通过智能指针调用
+    ptr->member_func(77);
+
+    // 4. const 成员函数调用
+    const_obj.const_member_func(66);
+
+    // 5. 静态成员函数调用
+    MyClass::static_func("World (direct)");
+
+    // 6. lambda 直接调用
+    sum = lambda(5, 6);
+    std::cout << "Lambda result (direct): " << sum << std::endl;
+
+    // 7. 数据成员访问
+    std::cout << "Data member access: " << obj.data << std::endl;
+    std::cout << "Data member access via pointer: " << obj_ptr->data << std::endl;
+
+    // 8. 使用 std::mem_fn 调用成员函数
+    auto member_func_fn = std::mem_fn(&MyClass::member_func);
+    member_func_fn(obj, 33);
+
+    auto const_member_func_fn = std::mem_fn(&MyClass::const_member_func);
+    const_member_func_fn(const_obj, 22);
+
+    // 9. 使用成员指针语法调用
+    void (MyClass:: * member_func_ptr)(int) = &MyClass::member_func;
+    (obj.*member_func_ptr)(11);
+    (obj_ptr->*member_func_ptr)(12);
+
+    // 10. 使用成员指针语法访问数据成员
+    std::cout << "Data member pointer access: " << obj.*mem_data_ptr << std::endl;
+    std::cout << "Data member pointer access via pointer: " << obj_ptr->*mem_data_ptr << std::endl;
+
+    std::cout << "\n=== Using C++23 explicit object parameter ===\n";
+
+    // --- 使用 C++23 显式对象参数调用 ---
+
+    // 1. 直接调用
+    obj.explicit_object_func(55);
+    const_obj.explicit_object_const_func(44);
+
+    // 2. 使用成员指针语法调用
+    auto explicit_object_func_ptr = &MyClass::explicit_object_func;
+    explicit_object_func_ptr(obj, 33);
+
+    // 3. 使用 std::invoke 调用（已在上方展示）
 
     return 0;
 }
@@ -1727,6 +1802,30 @@ int main() {
 | **Lambda**          | C++11    | 内联定义匿名函数对象，可捕获上下文，是现代 C++ 实现回调和行为定制的首选。 |
 
 **简单来说：当你需要编写一个模板，并且这个模板要调用某个未知类型的可调用对象时，`std::invoke` 是你的最佳选择。它提供了类型安全且语法统一的调用方式。**
+
+#### `显示对象参数特性(C++23)`
+
+> [](./关键字和语法糖特性.md)
+
+* 这个特性的添加能够在类内 **调用自身、返回自身**，**明确了this**，同时能够**简化	函数指针式的调用类内成员函数**	见	**`std::invoke`详解的例子**
+* **明确了this**指：作为参数，可以是值拷贝，可以是引用，可以是引用const
+* 同时也能够应用到lambda表达式中，lambda本身就是一个闭包，匿名的类对象语法糖调用仿函数类似调用函数，所有既然是对象，那么使用显示对象参数特性就能够实现自身的递归调用
+
+递归实现归并排序
+
+```c
+ auto merge_sort = []<typename It, typename Compare = std::less<>>(this auto&& self, It first, It last, Compare comp = Compare()) -> void
+        {
+            if (last - first > 1) {
+                auto mid = first + (last - first) / 2;
+                self(first, mid, comp);
+                self(mid, last, comp);
+                std::inplace_merge(first, mid, last, comp);
+            }
+        };
+```
+
+
 
 ### (4) std::apply
 
@@ -4714,3 +4813,191 @@ int main() {
 - `std::expected`：使用联合体存储值或错误，加上一个布尔标志
 
 `std::expected` 是现代 C++ 错误处理的重要工具，它提供了一种类型安全、表达力强的方式来处理可能失败的操作。通过结合 Monadic 操作和丰富的错误类型，可以构建出既健壮又易于维护的代码。
+
+# 底层实现
+
+## tuple
+
+```c
+// MSVC递归
+template <>
+class tuple<> { // empty tuple
+};
+template <class _This, class... _Rest>
+class tuple<_This, _Rest...> : private tuple<_Rest...> { // recursive tuple definition
+    using _This_type = _This;
+    using _Mybase    = tuple<_Rest...>;
+    _Tuple_val<_This> _Myfirst; // the stored element
+};
+
+// gcc索引接口
+template<size_t _Idx, typename... _Elements>
+struct _Tuple_impl;
+
+template<>
+class tuple<>{
+};
+  /// Primary class template, tuple
+template<typename... _Elements>
+class tuple : public _Tuple_impl<0, _Elements...>
+{
+    using _Inherited = _Tuple_impl<0, _Elements...>;
+};
+```
+
+好的，我们来详细解析现代C++中 `std::tuple` 的底层实现原理，并对比 MSVC 和 GCC (libstdc++) 的实现差异。
+
+### 核心原理：如何存储不同类型
+
+`std::tuple` 能够存储不同类型数据的核心原理是 **递归模板继承（Recursive Template Inheritance）** 和 **编译期计算（Compile-time Computation）**。
+
+1.  **类型安全与内存布局**： `tuple` 不是一种动态的、类型擦除的容器（如 `void*` 数组）。相反，它在编译期就完全确定了所有成员的类型和数量。每个成员都被存储在一个独立的、具有特定类型的非静态数据成员中。这些成员在内存中的布局通常是连续的（但可能存在对齐带来的填充），这与 `struct { T1 first; T2 second; T3 third; }` 类似。
+
+2.  **编译期索引访问**： 通过 `std::get<N>(my_tuple)` 访问元素不是在运行时计算偏移量。编译器在编译时就知道第 `N` 个元素的类型和它在继承链或数据结构中的确切位置，并直接生成访问该特定成员的代码。
+
+---
+
+### MSVC 实现分析（递归继承模式）
+
+微软MSVC标准库的实现采用了经典的**递归继承**模式。你提供的代码片段非常准确地描绘了其核心结构。
+
+```cpp
+// 基础 case：空 tuple 的特化
+template <>
+class tuple<> { // empty tuple
+};
+
+// 递归 case：将元组分解为“第一个元素”和“剩余元素包”
+template <class _This, class... _Rest>
+class tuple<_This, _Rest...> : private tuple<_Rest...> { // 递归继承自“剩余元素”的元组
+    using _Mybase = tuple<_Rest...>;
+    _Tuple_val<_This> _Myfirst; // 存储第一个元素
+};
+```
+
+**工作原理：**
+
+1.  **递归继承**： `tuple<int, double, std::string>` 的继承关系如下：
+    *   `tuple<int, double, std::string>` **继承自** `tuple<double, std::string>`
+    *   `tuple<double, std::string>` **继承自** `tuple<std::string>`
+    *   `tuple<std::string>` **继承自** `tuple<>`
+    *   `tuple<>` 是空基类。
+
+2.  **成员分布**： 每个层级的派生类都存储着它自己的“第一个”元素。
+    *   `tuple<std::string>` 层存储 `std::string` 元素。
+    *   `tuple<double, std::string>` 层存储 `double` 元素。
+    *   `tuple<int, double, std::string>` 层存储 `int` 元素。
+
+3.  **内存布局**： 由于标准布局类（Standard-layout class）的规则和空基类优化（EBCO），所有元素在内存中通常是**从基类到派生类、从后往前**紧密排列的。一个 `tuple<int, double, std::string>` 在内存中的顺序可能是：`std::string` -> `double` -> `int`。
+
+4.  **元素访问 (`get<N>`)**： 这是一个编译时的递归过程。
+    ```cpp
+    // get 的实现核心（概念简化）
+    template <size_t _Index, class _Tuple>
+    auto _Get_impl(_Tuple& _Tpl) {
+        if constexpr (_Index == 0) {
+            // 当前层级存储着所需的元素
+            return _Tpl._Myfirst;
+        } else {
+            // 向上转型到基类（即“剩余元素”组成的tuple），然后查找 Index-1
+            return _Get_impl<_Index - 1>(static_cast<_Tuple::_Mybase&>(_Tpl));
+        }
+    }
+    ```
+    对于 `get<1>(my_tuple)`，编译器会：
+    *   在 `tuple<int, double, string>` 层发现 `1 != 0`，于是递归到其基类 `tuple<double, string>`。
+    *   在 `tuple<double, string>` 层发现 `0 == 0`，返回该层存储的 `double` 成员。
+
+**优点：** 实现相对直观，符合人们对递归模板的经典理解。
+
+---
+
+### GCC (libstdc++) 实现分析（索引接口模式）
+
+GCC的libstdc++实现采用了**递归复合**而非递归继承，并使用了一个**索引接口**类模板 (`_Tuple_impl`) 来管理元素。这种方式更注重将实现细节与接口分离。
+
+```cpp
+// 基础 case：空 tuple 的特化
+template<>
+class tuple<> {};
+
+// 主模板：tuple 继承自 _Tuple_impl
+template<typename... _Elements>
+class tuple : public _Tuple_impl<0, _Elements...> // 从索引 0 开始
+{
+    using _Inherited = _Tuple_impl<0, _Elements...>;
+};
+```
+
+**`_Tuple_impl` 是真正的核心：**
+
+```cpp
+// _Tuple_impl 的定义
+template<size_t _Idx, typename... _Elements>
+struct _Tuple_impl;
+
+// _Tuple_impl 的偏特化：处理至少一个元素的情况
+template<size_t _Idx, typename _Head, typename... _Tail>
+struct _Tuple_impl<_Idx, _Head, _Tail...> : public _Tuple_impl<_Idx + 1, _Tail...>
+{
+    _Head _M_head; // 存储当前索引对应的元素
+
+    // ... 成员函数 ...
+};
+
+// _Tuple_impl 的终止特化：处理索引超出范围（元素包为空）
+template<size_t _Idx>
+struct _Tuple_impl<_Idx> {
+    // 无数据成员
+};
+```
+
+**工作原理：**
+
+1.  **递归复合与继承**： `tuple<int, double, std::string>` 的继承关系如下：
+    *   `tuple<int, double, std::string>` **继承自** `_Tuple_impl<0, int, double, std::string>`
+    *   `_Tuple_impl<0, int, double, string>` **继承自** `_Tuple_impl<1, double, std::string>`
+    *   `_Tuple_impl<1, double, std::string>` **继承自** `_Tuple_impl<2, std::string>`
+    *   `_Tuple_impl<2, std::string>` **继承自** `_Tuple_impl<3>`（空基类）
+
+2.  **成员分布**： 每个 `_Tuple_impl<_Idx, Head, Tail...>` 层级存储着它对应索引 `_Idx` 的元素 `_Head`。
+    *   `_Tuple_impl<2, std::string>` 存储 `std::string` 元素。
+    *   `_Tuple_impl<1, double, std::string>` 存储 `double` 元素。
+    *   `_Tuple_impl<0, int, double, std::string>` 存储 `int` 元素。
+
+3.  **内存布局**： 与MSVC类似，得益于EBCO，元素也是紧密排列的。但顺序是**从高索引到低索引、从基类到派生类**。一个 `tuple<int, double, std::string>` 在内存中的顺序可能是：`std::string` (索引2) -> `double` (索引1) -> `int` (索引0)。这与MSVC的结果是相同的。
+
+4.  **元素访问 (`get<N>`)**: 直接利用编译期索引和继承关系。
+    ```cpp
+    // get 的实现核心（概念简化）
+    template <size_t __i, typename... _Elements>
+    auto& get(tuple<_Elements...>& __t) noexcept {
+        // 直接转换到存储该元素的 _Tuple_impl 层级
+        // _Tuple_impl<__i, ...> 中正好存储着我们要找的元素
+        return static_cast<_Tuple_impl<__i, _Elements...>&>(__t)._M_head;
+    }
+    ```
+    编译器知道 `tuple<int, double, string>` 继承自 `_Tuple_impl<0, int, double, string>`，而后者又继承自 `_Tuple_impl<1, double, string>`。当调用 `get<1>(t)` 时，它直接将 `t` 向上转换（`static_cast`）到 `_Tuple_impl<1, double, string>` 这个基类，然后访问其 `_M_head` 成员。**这是一个直接的转换，没有运行时递归开销。**
+
+**优点：**
+*   **接口清晰**： `tuple` 类本身非常干净，只是继承自实现类。
+*   **访问效率高**： `get<N>` 通常可以编译为一次简单的指针偏移计算，因为对象布局在编译期是完全确定的。虽然MSVC的递归方式也能被优化，但GCC的这种设计更直接地暴露了元素的位置。
+
+---
+
+### MSVC 与 GCC 实现对比总结
+
+| 特性              | MSVC (递归继承)                                              | GCC (索引接口/递归复合)                                      |
+| :---------------- | :----------------------------------------------------------- | :----------------------------------------------------------- |
+| **核心模式**      | **递归继承**：`tuple<A,B,C>` : private `tuple<B,C>`          | **递归复合+继承**：`tuple<A,B,C>` : public `_Tuple_impl<0, A,B,C>` |
+| **实现主体**      | `tuple` 模板自身                                             | 辅助模板 `_Tuple_impl`                                       |
+| **元素存储**      | 在每个 `tuple<Rest...>` 层级中的 `_Myfirst` 成员             | 在每个 `_Tuple_impl<Idx, Head, Tail...>` 层级中的 `_M_head` 成员 |
+| **`get<N>` 原理** | **递归向下转型**：通过不断向基类转型并递减索引直到0          | **直接转型**：直接向上转型到包含第N个元素的 `_Tuple_impl<N, ...>` 基类 |
+| **内存布局**      | 基本相同：元素从后往前（从最后一个到第一个）紧密排列，依赖EBCO | 基本相同：元素从后往前（从最后一个到第一个）紧密排列，依赖EBCO |
+| **设计哲学**      | 更“传统”的元组实现方式，概念简单                             | 更“现代”，将接口与实现分离，**编译期索引的意识更强**         |
+
+**关键区别：**
+最大的区别在于 **`get<N>` 的访问策略**。MSVC的策略是“递归查找”，而GCC的策略是“直接定位”。虽然在优化的Release构建中，性能可能没有差异（编译器会优化掉所有递归），但GCC的设计在概念上更清晰，并且可能与编译器的内部机制结合得更好。
+
+**结论：**
+两种实现都完美地实现了C++标准要求的 `tuple` 功能，并且在内存效率和运行时性能上都是最优的。它们都深度依赖于模板元编程和空基类优化。GCC (libstdc++) 的实现通常被认为更现代、更清晰，它将存储和索引的逻辑完全委托给了 `_Tuple_impl` 这个辅助类，使得 `tuple` 主类非常简洁。而MSVC的实现则更加直接地将递归关系体现在 `tuple` 自身的继承体系上。对于普通开发者来说，这种差异是完全透明的。
