--- a/document/并发支持库.md
+++ b/document/并发支持库.md
@@ -23,7 +23,11 @@ thread_local int x = 1; // 每个线程都能够拥有自己的x互不影响
 int y = 1;	//全局变量，每个线程共享
 ```
 
-好的，这里是一份从 C++23 视角编写的关于进程、线程、协程区别的 Markdown 说明文档。
+# 博客连接
+
+https://mq-b.github.io/ModernCpp-ConcurrentProgramming-Tutorial/
+
+
 
 ---
 
@@ -144,7 +148,7 @@ int main() {
 
 ## 1. 概述
 
-C++11 引入了多线程支持，其中 `<mutex>` 和 `<shared_mutex>` 头文件提供了多种互斥量和锁机制，用于线程同步和数据竞争防护。这些工具是现代C++并发编程的基础组件。
+C++11 引入了多线程支持，其中 `<mutex>` 和 `<shared_mutex>` 头文件提供了多种互斥量和锁机制，用于线程同步和数据竞争防护，**即被锁的临界区代码只允许一个线程执行**。这些工具是现代C++并发编程的基础组件。
 
 * mutex
 
@@ -341,9 +345,15 @@ std::mutex mutex1, mutex2;
 void safeMultipleLock() {
     // C++17之前的方式
     std::lock(mutex1, mutex2); // 同时锁定，避免死锁
-    std::lock_guard<std::mutex> lock1(mutex1, std::adopt_lock);
+    std::lock_guard<std::mutex> lock1(mutex1, std::adopt_lock); // 构造时不用上锁（已锁）
     std::lock_guard<std::mutex> lock2(mutex2, std::adopt_lock);
-    
+    /*
+    // 等价
+    std::lock_guard<std::mutex> lock1(mutex1, std::defer_lock); //  构造时不上锁（未锁），延迟锁
+    std::lock_guard<std::mutex> lock2(mutex2, std::defer_lock);
+    std::lock(mutex1, mutex2); // 同时锁定，避免死锁
+    */
+
     // 执行操作
 }
 
@@ -1363,7 +1373,7 @@ int main() {
 
 ### （2）std::packaged_task
 
-`std::packaged_task` 包装一个可调用对象，并将其执行结果与一个 future 关联。
+`std::packaged_task` 包装一个可调用对象，并将其执行结果与一个 future 关联。如果不移动包装对象到线程中执行，那么就是主线程 执行
 
 | 方法                         | 描述                         |
 | ---------------------------- | ---------------------------- |
@@ -1375,11 +1385,23 @@ int main() {
 
 `std::async` 是一个函数模板，用于异步执行函数并返回一个 future。
 
+和`std::thread`的区别是，
+
+* `std::thread`一定会创建线程，如果资源不够的话会产生错误，程序崩溃
+
+* `std::async` 可能不创建线程，也不会产生错误
+
 | 参数/选项               | 描述                            |
 | ----------------------- | ------------------------------- |
 | `std::launch::async`    | 在新线程中异步执行              |
 | `std::launch::deferred` | 延迟执行，直到调用 future.get() |
 | 无策略参数              | 由实现决定执行方式              |
+
+* `launch::async | launch::deferred`：是否创建线程由系统调度决定，资源紧张，就不创建
+* `launch::async`：要求调用的方法必须在线程内执行，强制的
+* `launch::deferred`：延迟调用，他不会在线程里面运行，它将延迟到，它的返回值`future`调用`get()`或者`wait()`执行
+
+在MSVC中实现，`launch::async | launch::deferred`和`launch::async`是等价的，MSVC调用了WIN32的内部线程池进行获取执行
 
 ### （4）std::shared_future
 
@@ -1419,6 +1441,15 @@ int main() {
     
     // 启动生产者线程
     std::thread t(producer, std::move(prom));
+    
+    /*
+    // 或者
+    std::promise<int> prom;
+    std::thread t(producer, std::ref(prom));
+    
+    std::future<int> fut = prom.get_future();
+
+    */
     
     std::cout << "Main thread waiting for result..." << std::endl;
     int result = fut.get(); // 阻塞直到值可用
@@ -1641,6 +1672,8 @@ int main() {
 - 使用 `promise.set_exception()` 传递异常给消费者
 
 ### （2）生命周期管理
+
+* `future.get()`的调用会导致`future`共享状态被销毁，可以查看源码了解
 
 - 确保 `promise` 和 `future` 的生命周期正确
 - 不要在没有关联 `promise` 的情况下调用 `future.get()`
@@ -2983,7 +3016,198 @@ int main() {
 
 选择哪种解决方案取决于具体的应用场景和性能要求。带标签指针是一种通用且高效的解决方案，适用于大多数无锁数据结构实现。
 
+## 8. `atomic<std::shared_ptr>`
+
+在前文中，我们多次提到 `std::shared_ptr`：
+
+> 第四章中提到：*多个线程能在不同的 shared_ptr 对象上调用**所有成员函数**[[3\]](https://mq-b.github.io/ModernCpp-ConcurrentProgramming-Tutorial/md/05内存模型与原子操作.html#footnote3)（包含复制构造函数与复制赋值）而不附加同步，即使这些实例是同一对象的副本且共享所有权也是如此。若多个执行线程访问**同一 shared_ptr** 对象而不同步，且任一线程使用 shared_ptr 的非 const 成员函数，则将出现数据竞争；`std::atomic<shared_ptr>` 能用于避免数据竞争。[文档](https://zh.cppreference.com/w/cpp/memory/shared_ptr#:~:text=多个线程能在不同的 shared_ptr 对象上调用所有成员函数（包含复制构造函数与复制赋值）而不附加同步，即使这些实例是同一对象的副本且共享所有权也是如此。若多个执行线程访问同一 shared_ptr 对象而不同步，且任一线程使用 shared_ptr 的非 const 成员函数，则将出现数据竞争；std%3A%3Aatomic 能用于避免数据竞争。)。*
+
+一个在互联网上非常热门的八股问题是：***`std::shared_ptr` 是不是线程安全？***
+
+显然，它并不是完全线程安全的，尽管在多线程环境中有很大的保证，但这还不够。在 C++20 中，原子模板 `std::atomic` 引入了一个偏特化版本 [`std::atomic`](https://zh.cppreference.com/w/cpp/memory/shared_ptr/atomic2) 允许用户原子地操纵 `shared_ptr` 对象。因为它是 `std::atomic` 的特化版本，即使我们还没有深入讲述它，也能知道它是**原子类型**，这意味着它的所有操作都是**原子操作**。
+
+若多个执行线程不同步地同时访问**同一** `std::shared_ptr` 对象，且任何这些访问使用了 shared_ptr 的**非 const 成员函数**，则将**出现数据竞争**，**除非通过 `std::atomic<std::shared_ptr>` 的实例进行所有访问**。
+
+```c
+class Data {
+public:
+    Data(int value = 0) : value_(value) {}
+    int get_value() const { return value_; }
+    void set_value(int new_value) { value_ = new_value; }
+private:
+    int value_;
+};
+
+auto data = std::make_shared<Data>();
+
+void writer(){
+    for (int i = 0; i < 10; ++i) {
+        std::shared_ptr<Data> new_data = std::make_shared<Data>(i);
+        data.swap(new_data); // 调用非 const 成员函数
+        std::this_thread::sleep_for(100ms);
+    }
+}
+
+void reader(){
+    for (int i = 0; i < 10; ++i) {
+        if (data) {
+            std::cout << "读取线程值: " << data->get_value() << std::endl;
+        }
+        else {
+            std::cout << "没有读取到数据" << std::endl;
+        }
+        std::this_thread::sleep_for(100ms);
+    }
+}
+
+int main(){
+    std::thread writer_thread{ writer };
+    std::thread reader_thread{ reader };
+
+    writer_thread.join();
+    reader_thread.join();
+}
+```
+
+> [运行](https://godbolt.org/z/6zo7hK8h1)测试。
+
+以上这段代码是典型的**线程不安全**，它满足：
+
+1. <u>**多个线程不同步地同时访问同一 `std::shared_ptr` 对象**</u>
+2. <u>**任一线程使用 shared_ptr 的非 const 成员函数**</u>
+
+那么**为什么呢**？为什么满足这些概念就是线程不安全呢？为了理解这些概念，首先需要了解 shared_ptr 的内部实现：
+
+shared_ptr 的通常实现只保有两个指针
+
+- 指向底层元素的指针（[get()](https://zh.cppreference.com/w/cpp/memory/shared_ptr/get)) 所返回的指针）
+- 指向*控制块* 的指针
+
+**控制块**是一个动态分配的对象，其中包含：
+
+- 指向被管理对象的指针或被管理对象本身
+- 删除器（类型擦除）
+- 分配器（类型擦除）
+- 持有被管理对象的 `shared_ptr` 的数量
+- 涉及被管理对象的 `weak_ptr` 的数量
+
+**控制块是线程安全的**，这意味着多个线程可以安全地操作引用计数和访问管理对象，即使这些 `shared_ptr` 实例是同一对象的副本且共享所有权也是如此。因此，多个线程可以安全地创建、销毁和复制 `shared_ptr` 对象，因为这些操作仅影响控制块中的引用计数。
+
+然而，`shared_ptr` 对象实例本身并不是线程安全的。`shared_ptr` 对象实例包含一个指向控制块的指针和一个指向底层元素的指针。这两个指针的操作在多个线程中并没有同步机制。因此，如果多个线程同时访问同一个 `shared_ptr` 对象实例并调用非 `const` 成员函数（如 `reset` 或 `operator=`），这些操作会导致对这些指针的并发修改，进而引发数据竞争。
+
+如果不是同一 shared_ptr 对象，每个线程读写的指针也不是同一个，控制块又是线程安全的，那么自然不存在数据竞争，可以安全的调用所有成员函数。
+
+------
+
+使用 `std::atomic<shared_ptr>` 修改：
+
+```c
+std::atomic<std::shared_ptr<Data>> data = std::make_shared<Data>();
+
+void writer() {
+    for (int i = 0; i < 10; ++i) {
+        std::shared_ptr<Data> new_data = std::make_shared<Data>(i);
+        data.store(new_data); // 原子地替换所保有的值
+        std::this_thread::sleep_for(10ms);
+    }
+}
+
+void reader() {
+    for (int i = 0; i < 10; ++i) {
+        if (auto sp = data.load()) {
+            std::cout << "读取线程值: " << sp->get_value() << std::endl;
+        }
+        else {
+            std::cout << "没有读取到数据" << std::endl;
+        }
+        std::this_thread::sleep_for(10ms);
+    }
+}
+```
+
+很显然，这是线程安全的，`store` 是原子操作，而 `sp->get_value()` 只是个读取操作。
+
+我知道，你肯定会想着：*能不能调用 `load()` 成员函数原子地返回底层的 `std::shared_ptr` 再调用 `swap` 成员函数？*
+
+可以，但是**没有意义**，因为 `load()` 成员函数返回的是底层 `std::shared_ptr` 的**副本**，也就是一个临时对象。对这个临时对象调用 `swap` 并不会改变 `data` 本身的值，因此这种操作没有实际意义，尽管这不会引发数据竞争（因为是副本）。
+
+由于我们没有对读写操作进行同步，只是确保了操作的线程安全，所以多次运行时可能会看到一些无序的打印，这是正常的。
+
+不过事实上 `std::atomic<std::shared_ptr>` 的功能相当有限，单看它提供的修改接口（`=`、`store`、`load`、`exchang`）就能明白。如果要操作其保护的共享指针指向的资源还是得 `load()` 获取底层共享指针的副本。此时再进行操作时就得考虑 `std::shared_ptr` 本身在多线程的支持了。
+
+------
+
+在使用 `std::atomic<std::shared_ptr>` 的时候，我们要注意第三章中关于共享数据的一句话：
+
+> **切勿将受保护数据的指针或引用传递到互斥量作用域之外**，不然保护将**形同虚设**。
+
+原子类型也有类似的问题，以下是一个例子：
+
+```c
+std::atomic<std::shared_ptr<int>> ptr = std::make_shared<int>(10);
+*ptr.load() = 100;
+```
+
+1. 调用 `load()` 成员函数，原子地返回底层共享指针的**副本** `std::shared_ptr`
+2. 解引用，等价 `*get()`，返回了 `int&`
+3. 直接修改这个引用所指向的资源。
+
+在第一步时，已经脱离了 `std::atomic` 的保护，第二步就获取了被保护的数据的引用，第三步进行了修改，这导致了数据竞争。当然了，这种做法非常的愚蠢，只是为了表示，所谓的线程安全，也是要靠**开发者的正确使用**。
+
+正确的用法如下：
+
+```c
+std::atomic<std::shared_ptr<int>> ptr = std::make_shared<int>(10);
+std::atomic_ref<int> ref{ *ptr.load() };
+ref = 100; // 原子地赋 100 给被引用的对象
+```
+
+通过使用 [`std::atomic_ref`](https://zh.cppreference.com/w/cpp/atomic/atomic_ref) 我们得以确保在修改共享资源时保持操作的原子性，从而避免了数据竞争。
+
+------
+
+最后再来稍微聊一聊提供的 `wait`、`notify_one` 、`notify_all` 成员函数。这并非是 `std::atomic<shared_ptr>` 专属，C++20 以后任何 atomic 的特化都拥有这些成员函数，使用起来也都十分的简单，我们这里用一个简单的例子为你展示一下：
+
+```c
+std::atomic<std::shared_ptr<int>> ptr = std::make_shared<int>();
+
+void wait_for_wake_up(){
+    std::osyncstream{ std::cout }
+        << "线程 "
+        << std::this_thread::get_id()
+        << " 阻塞，等待更新唤醒\n";
+
+    // 等待 ptr 变为其它值
+    ptr.wait(ptr.load());
+
+    std::osyncstream{ std::cout }
+        << "线程 "
+        << std::this_thread::get_id()
+        << " 已被唤醒\n";
+}
+
+void wake_up(){
+    std::this_thread::sleep_for(5s);
+
+    // 更新值并唤醒
+    ptr.store(std::make_shared<int>(10));
+    ptr.notify_one();
+}
+```
+
+
+
+------
+
+
+
 # 七、`<barrier>`、`<latch>`
+
+视频教程	
+
+https://www.bilibili.com/video/BV1zD421M71T/
+
+https://www.bilibili.com/video/BV19w4m1a7fD/
 
 ## 1. 概述
 
@@ -3033,7 +3257,8 @@ void worker(int id, std::latch& latch) {
     std::cout << "Thread " << id << " finished work" << std::endl;
     
     // 减少计数并通知
-    latch.count_down();
+    latch.count_down(); // 默认减少1
+    //latch.count_down(2); //显示减少2
 }
 
 int main() {
@@ -3060,7 +3285,7 @@ int main() {
 }
 ```
 
-### （2）使用 arrive_and_wait
+### （2）使用 arrive_and_wait（计数减少1，等待计数为0，不会重置计数，划分了两端区域代码，同步）
 
 ```cpp
 #include <iostream>
@@ -3129,7 +3354,7 @@ void worker(int id, std::barrier<>& bar) {
         std::cout << "Thread " << id << " reached barrier in phase " << phase << std::endl;
         
         // 到达屏障并等待其他线程
-        bar.arrive_and_wait();
+        bar.arrive_and_wait(); //（计数减少1，等待计数为0，会重置计数，划分了两端区域代码，同步）
         
         std::cout << "Thread " << id << " passed barrier in phase " << phase << std::endl;
     }
@@ -3157,7 +3382,7 @@ int main() {
 }
 ```
 
-### （2）使用 arrive 和 wait 分离
+### （2）使用 arrive 和 wait 分离（arrive_and_wait等价于wait(arrive())）
 
 ```cpp
 #include <iostream>
@@ -3208,7 +3433,7 @@ int main() {
 }
 ```
 
-### （3）使用 arrive_and_drop
+### （3）使用 arrive_and_drop（减少当前计数1，并减少重置计数1）
 
 ```cpp
 #include <iostream>
@@ -3417,9 +3642,11 @@ int main() {
 
 # 八、`<semaphore>`
 
+视频介绍 	https://www.bilibili.com/video/BV11s421g7Pu/
+
 ## 1. 概述
 
-C++20 引入了信号量（Semaphore）作为新的同步原语，定义在 `<semaphore>` 头文件中。信号量是一种比互斥锁更灵活的同步机制，它允许一定数量的线程同时访问共享资源，而不仅仅是互斥访问。
+C++20 引入了信号量（Semaphore）作为新的同步原语，定义在 `<semaphore>` 头文件中。信号量是一种比互斥锁更灵活的同步机制，**<u>它允许一定数量的线程同时访问共享资源</u>**，而不仅仅是互斥访问。
 
 1. `std::counting_semaphore`
 
@@ -3503,13 +3730,13 @@ int main() {
 std::binary_semaphore bsem(1); // 初始值为1
 
 void critical_section(int id) {
-    bsem.acquire(); // 获取信号量（进入临界区）
+    bsem.acquire(); // 获取信号量（进入临界区），减少信号量的值-1
     
     std::cout << "Thread " << id << " in critical section" << std::endl;
     std::this_thread::sleep_for(std::chrono::milliseconds(500));
     std::cout << "Thread " << id << " leaving critical section" << std::endl;
     
-    bsem.release(); // 释放信号量（离开临界区）
+    bsem.release(); // 释放信号量（离开临界区），增加信号量的值+1
 }
 
 int main() {
